# dokploy_api

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  api.py  pyproject.toml
backlog/: config.yml
backlog/tasks/: task-001 - Add-domain-query-endpoint-support-to-api.py.md  task-002 - Add-domain-query-endpoint-support-to-api.py.md  task-003 - Add-deployment-operations-support-to-api.py.md  task-004 - Add-GitHub-provider-management-to-api.py.md  task-005 - Add-Docker-container-monitoring-to-api.py.md  task-006 - Implement-comprehensive-test-suite-with-pytest.md  task-007 - Add-integration-tests-for-API-client-interactions.md  task-008 - Add-end-to-end-tests-for-complete-CLI-workflows.md
docs/: openapi-spec.json
lib/: dokploy.py
tests/: test_e2e.py  test_integration.py  test_unit.py
utils/: extract.py  schema.py  validate.py
